--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,16 +2,20 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h1 class="mb-4">Login</h1>
+<h1 class="mb-4">Вход в систему</h1>
 
 <form method="POST" class="mt-4">
   <div class="form-group">
     <label for="username">Имя пользователя</label>
-    <input type="text" class="form-control" id="username" name="username" placeholder="Введите имя">
+    <input type="text" class="form-control" id="username" name="username" placeholder="Введите имя пользователя" required>
+  </div>
+  <div class="form-group mt-3">
+    <label for="password">Пароль</label>
+    <input type="password" class="form-control" id="password" name="password" placeholder="Введите пароль" required>
   </div>
   <div class="form-group mt-3">
     <label for="session_id">Session ID</label>
-    <input type="text" class="form-control" id="session_id" name="session_id" placeholder="Вставьте session_id">
+    <input type="text" class="form-control" id="session_id" name="session_id" placeholder="Вставьте session_id" required>
   </div>
   <button type="submit" class="btn btn-primary mt-4">Войти</button>
 </form>
@@ -19,6 +23,6 @@
 <hr>
 
 <p class="mt-3">
-  Нет session_id? <a href="{{ url_for('generate') }}">Сгенерировать здесь</a>
+  Нет session_id? <a href="{{ url_for('generate') }}">Сгенерируйте его здесь</a>
 </p>
 {% endblock %}
